fix: prevent email display overflow in share dialog
- Added min-width: 0 to allow text truncation in flex containers
- Fixed conditional logic to properly hide email for group entries

--- a/packages/shared/components/share/Share.module.scss
+++ b/packages/shared/components/share/Share.module.scss
@@ -399,6 +399,7 @@
     -moz-user-select: text;
     -ms-user-select: text;
     user-select: text;
+    min-width: 0;
   }
 
   :global(.name-wrapper),
